2005-10-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/pbm.trm (PBM_options): Add an option to set the output size.
	set term pbm size XXX,YYY

2005-10-04  Bastian Maerkisch  <bmaerkisch@web.de>

        * src/win/wtext.c (DragFunc): Increase maximum length of filenames in
	drag and drop operations to MAX_PATH (bug found by Tim Chippington
	Derrick).

2005-10-03  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: Issue a warning message if someone tries to build the
	PNG terminal without libgd.

2005-10-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Remove unused struct default_keybox_lp.

	* src/graph3d.c src/graph3d.h src/mouse.c src/save.c src/set.c
	src/show.c src/tables.c src/unset.c docs/gnuplot.doc:
	Move global ticslevel into a global struct xyplane that also contains a
	flag indicating whether the value fixes the Z-intercept of the x/y plane
	at a fraction of the z range (old behaviour) or a specific value of
	Z (new option). To select a specific Z, use "set ticslevel at <zval>".
	This change also introduces "xyplane" as a synonym for "ticslevel",
	so the more easily remembered form of the command is
	"set xyplane at <zval>".

	* src/graph3d.c (do_3dplot): Check for absolute placement of xyplane
	along Z axis, controlled by "set {ticslevel|xyplane} at <zval>".

2005-10-01  Ethan Merritt  <merritt@u.washington.edu>

	Lines have more properties now than they used to. Rather than expanding
	the number of parameters to lp_parse() to pass default values for each
	property separately, change to requiring the caller of lp_parse() to
	preload default values into the lp_style_type structure being passed.
	This change should not by itself affect current syntax or behaviour,
	but will allow us to remove the style initialization from lp_parse().
	This in turn will allow different callers to have different default
	line styles while still sharing the same parsing routine.
